@@ -1,148 +1,169 @@
 package ru.practicum.shareit.item;
 
 import lombok.RequiredArgsConstructor;
-import org.apache.commons.lang3.StringUtils;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.shareit.booking.BookingMapper;
 import ru.practicum.shareit.booking.Booking;
-import ru.practicum.shareit.booking.StatusBooking;
 import ru.practicum.shareit.booking.BookingRepository;
-import ru.practicum.shareit.exception.BadRequestException;
-import ru.practicum.shareit.exception.ObjectNotFoundException;
-import ru.practicum.shareit.request.RequestRepository;
-import ru.practicum.shareit.user.UserRepository;
+import ru.practicum.shareit.exceptions.NotFoundException;
+import ru.practicum.shareit.exceptions.ValidationException;
+import ru.practicum.shareit.user.UserMapper;
+import ru.practicum.shareit.user.User;
+import ru.practicum.shareit.user.UserService;
+import ru.practicum.shareit.user.UserDto;
 
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
-@Transactional(readOnly = true)
 @RequiredArgsConstructor
+@Slf4j
 public class ItemServiceImpl implements ItemService {
     private final ItemRepository itemRepository;
-    private final UserRepository userRepository;
+    private final UserService userService;
     private final BookingRepository bookingRepository;
     private final CommentRepository commentRepository;
-    private final RequestRepository requestRepository;
 
     @Override
     @Transactional
-    public ItemResponseDto createItem(ItemDto itemDto, Long userId) {
-        Item newItem = ItemMapper.toItem(new Item(), itemDto);
-        newItem.setOwner(userRepository.findById(userId)
-                .orElseThrow(() -> new ObjectNotFoundException("Собственник не найден")));
-        if (itemDto.getRequestId() != null) {
-            var itemRequest = requestRepository.findById(itemDto.getRequestId());
-            itemRequest.ifPresent(newItem::setRequest);
-        }
-        Item createdItem = itemRepository.save(newItem);
-        return ItemMapper.toItemResponseDto(createdItem);
+    public ItemDto create(Long userId, ItemDto itemDto) {
+        UserDto user = userService.getUserById(userId);
+        Item item = ItemMapper.toItem(itemDto);
+        item.setOwner(UserMapper.toUser(user));
+        return ItemMapper.toItemDto(itemRepository.save(item));
     }
 
     @Override
     @Transactional
-    public ItemResponseDto updateItem(ItemDto itemDto, Long itemId, Long userId) {
-        Item item = itemRepository.findById(itemId)
-                .orElseThrow(() -> new ObjectNotFoundException("Вещь не найдена"));
-        if (!userId.equals(item.getOwner().getId())) {
-            throw new ObjectNotFoundException("Собственник не найден");
+    public ItemDto update(Long userId, Long itemId, ItemDto itemDto) {
+        UserDto user = userService.getUserById(userId);
+        Optional<Item> itemOptional = itemRepository.findById(itemId);
+
+        itemOptional.orElseThrow(() -> new NotFoundException(String.format("Предмет с id %s не найтен.", itemId)));
+        Item itemFromStorage = itemOptional.get();
+
+        if (!itemFromStorage.getOwner().getId().equals(userId)) {
+            log.debug("User with id {} is not owner of item with id {}.", userId, itemId);
+            throw new NotFoundException(String.format("Пользователь с id %s " +
+                    "не является владельцем предмета id %s.", userId, itemId));
         }
-        ItemMapper.toItem(item, itemDto);
-        item.setId(itemId);
-        return ItemMapper.toItemResponseDto(item);
+        Item item = ItemMapper.toItem(itemDto);
+        if (Objects.isNull(item.getAvailable())) {
+            item.setAvailable(itemFromStorage.getAvailable());
+        }
+        if (Objects.isNull(item.getDescription())) {
+            item.setDescription(itemFromStorage.getDescription());
+        }
+        if (Objects.isNull(item.getName())) {
+            item.setName(itemFromStorage.getName());
+        }
+        item.setId(itemFromStorage.getId());
+        item.setRequestId(itemFromStorage.getRequestId());
+        item.setOwner(itemFromStorage.getOwner());
+
+        return ItemMapper.toItemDto(itemRepository.save(item));
+    }
+
+
+    @Override
+    @Transactional(readOnly = true)
+    public ItemDto getItemById(Long userId, Long itemId) {
+        userService.getUserById(userId);
+        Optional<Item> itemGet = itemRepository.findById(itemId);
+        if (itemGet.isEmpty()) {
+            log.warn("У пользователя с id {} не существует предмета с id {}", userId, itemId);
+            throw new ru.practicum.shareit.exceptions.NotFoundException(String.format("У пользователя с id %s не " +
+                    "существует предмета с id %s", userId, itemId));
+        }
+        Item item = itemGet.get();
+
+        ItemDto itemDto = ItemMapper.toItemDto(item);
+        itemDto.setComments(getAllComments(itemId));
+        if (!item.getOwner().getId().equals(userId)) {
+            return itemDto;
+        }
+        getLastNextBooking(itemDto);
+        return itemDto;
     }
 
     @Override
-    public ItemResponseDto getItemById(Long id, Long userId) {
-        Item itemDb = itemRepository.findById(id)
-                .orElseThrow(() -> new ObjectNotFoundException(String.format("Вещь не найдена" + id)));
-        return addBookingsCommentsItem(itemDb, userId);
+    @Transactional(readOnly = true)
+    public List<ItemDto> getAll(Long userId, Integer from, Integer size) {
+        userService.getUserById(userId);
+        Pageable pageable = PageRequest.of(from / size, size);
+
+        List<Item> itemList = itemRepository.findAllByOwnerIdOrderByIdAsc(userId, pageable).stream().collect(Collectors.toList());
+        List<ItemDto> items = ItemMapper.mapToItemDto(itemList);
+        items.forEach(i -> {
+            getLastNextBooking(i);
+            i.setComments(getAllComments(i.getId()));
+        });
+
+        return items;
     }
 
-    @Override
-    public List<ItemResponseDto> getItemsByUserId(Long userId, Integer from, Integer size) {
-        Pageable pageable;
-        pageable = PageRequest.of(from, size, Sort.by(Sort.Direction.ASC, "id"));
-        userRepository.findById(userId)
-                .orElseThrow(() -> new ObjectNotFoundException(String.format("Пользователь не найден" + userId)));
-        List<Item> items = itemRepository.findAllByOwnerId(userId, pageable).getContent();
-        List<Comment> comments = commentRepository.findAllByItemIn(items);
-        Map<Long, List<CommentResponseDto>> commentsByItemIds = comments.stream()
-                .map(CommentMapper::toCommentResponseDto)
-                .collect(Collectors.groupingBy(CommentResponseDto::getItemId, Collectors.toList()));
-        LocalDateTime now = LocalDateTime.now();
-        List<Booking> lastBookings = bookingRepository.findAllByItemInAndStartLessThanEqualAndStatusIsOrderByEndDesc(items, now, StatusBooking.APPROVED);
-        Map<Long, Booking> lastBookingsByItemIds = lastBookings.stream()
-                .collect(Collectors.toMap(booking -> booking.getItem().getId(), Function.identity(), (booking1, booking2) -> booking1));
-        List<Booking> nextBookings = bookingRepository.findAllByItemInAndStartIsAfterAndStatusOrderByStart(
-                items, now, StatusBooking.APPROVED);
-        Map<Long, Booking> nextBookingsByItemIds = nextBookings.stream()
-                .collect(Collectors.toMap(booking -> booking.getItem().getId(), Function.identity(), (booking1, booking2) -> booking1));
-        return items.stream()
-                .map(item -> ItemMapper.toMap(item, commentsByItemIds.get(item.getId()),
-                        lastBookingsByItemIds.get(item.getId()), nextBookingsByItemIds.get(item.getId())))
+    @Transactional
+    public List<CommentDto> getAllComments(Long itemId) {
+        List<Comment> comments = commentRepository.findAllByItemId(itemId);
+
+        return comments.stream()
+                .map(CommentMapper::toCommentDto)
                 .collect(Collectors.toList());
     }
 
     @Override
-    @Transactional
-    public void removeItemById(Long id) {
-        itemRepository.findById(id)
-                .orElseThrow(() -> new ObjectNotFoundException("Вещь не найдена:" + id));
-        itemRepository.deleteById(id);
-    }
-
-    public List<ItemResponseDto> searchItems(String text, Integer from, Integer size) {
-        Pageable pageable;
-        pageable = PageRequest.of(from / size, size);
-        if (StringUtils.isBlank(text)) {
+    @Transactional(readOnly = true)
+    public List<ItemDto> search(Long userId, String text, Integer from, Integer size) {
+        userService.getUserById(userId);
+        Pageable pageable = PageRequest.of(from / size, size);
+        if (text.isBlank()) {
             return Collections.emptyList();
         }
-        return itemRepository.search(text, pageable)
-                .stream()
-                .map(ItemMapper::toItemResponseDto)
-                .collect(Collectors.toList());
+        return ItemMapper.mapToItemDto(itemRepository.findAll(pageable).stream()
+                .filter(Item::getAvailable)
+                .filter(item -> item.getName().toLowerCase().contains(text.toLowerCase())
+                        || item.getDescription().toLowerCase().contains(text.toLowerCase()))
+                .collect(Collectors.toList()));
     }
 
     @Override
     @Transactional
-    public CommentResponseDto createComment(CommentDto commentDto, Long userId, Long itemId) {
-        Comment newComment = new Comment();
-        CommentMapper.toComment(newComment, commentDto);
-        newComment.setCreated(LocalDateTime.now());
-        newComment.setAuthor(userRepository.findById(userId)
-                .orElseThrow(() -> new ObjectNotFoundException(String.format("Пользователь не найден" + userId))));
-        newComment.setItem(itemRepository.findById(itemId)
-                .orElseThrow(() -> new ObjectNotFoundException(String.format("Вещь не найдена:" + itemId))));
-        Booking booking = bookingRepository.findFirstByItemAndBookerAndEndIsBeforeAndStatusIs(newComment.getItem(), newComment.getAuthor(), LocalDateTime.now(), StatusBooking.APPROVED);
-        if (booking == null) {
-            throw new BadRequestException("Вещь не была забронирована");
+    public CommentDto createComment(Long userId, CommentDto commentDto, Long itemId) {
+        User user = UserMapper.toUser(userService.getUserById(userId));
+
+        Optional<Item> itemById = itemRepository.findById(itemId);
+
+        if (itemById.isEmpty()) {
+            log.warn("Пользователь с id {} нет предмета с id {}.", userId, itemId);
+            throw new NotFoundException(String.format("Пользователь с id: %s " +
+                    "нет предмета с id: %s.", userId, itemId));
         }
-        Comment createdComment = commentRepository.save(newComment);
-        return CommentMapper.toCommentResponseDto(createdComment);
+        Item item = itemById.get();
+
+        List<Booking> userBookings = bookingRepository.findAllByUserBookings(userId, itemId, LocalDateTime.now());
+
+        if (userBookings.isEmpty()) {
+            log.warn("Пользователь с id {} должен иметь хотя бы одно бронирование предмета с id {}.", userId, itemId);
+            throw new ValidationException(String.format("Пользователь с id %s должно быть хотя бы одно бронирование " +
+                    "предмета с id %s.", userId, itemId));
+        }
+
+        return CommentMapper.toCommentDto(commentRepository.save(CommentMapper.toComment(commentDto, item, user)));
     }
 
-    private ItemResponseDto addBookingsCommentsItem(Item itemDto, Long userId) {
-        ItemResponseDto itemResponseDto = ItemMapper.toItemResponseDto(itemDto);
-        var lastBooking = bookingRepository.findFirstByItemAndStartLessThanEqualAndStatusIsOrderByEndDesc(itemDto, LocalDateTime.now(), StatusBooking.APPROVED);
-        if (lastBooking != null && userId.equals(itemDto.getOwner().getId())) {
-            itemResponseDto.setLastBooking(BookingMapper.toBookingDto(lastBooking));
-        }
-        var nextBooking = bookingRepository.findFirstByItemAndStartIsAfterAndStatusIsOrderByStart(itemDto, LocalDateTime.now(), StatusBooking.APPROVED);
-        if (nextBooking != null && userId.equals(itemDto.getOwner().getId())) {
-            itemResponseDto.setNextBooking(BookingMapper.toBookingDto(nextBooking));
-        }
-        List<CommentResponseDto> comments = commentRepository.findAllByItem(itemDto).stream()
-                .map(CommentMapper::toCommentResponseDto)
-                .collect(Collectors.toList());
-        itemResponseDto.setComments(comments);
-
-        return itemResponseDto;
+    private void getLastNextBooking(ItemDto itemDto) {
+        Optional<Booking> lastBooking = bookingRepository.getLastBooking(itemDto.getId(), LocalDateTime.now());
+        itemDto.setLastBooking(
+                lastBooking.map(BookingMapper::toBookingItemDto).orElse(null)
+        );
+        Optional<Booking> nextBooking = bookingRepository.getNextBooking(itemDto.getId(), LocalDateTime.now());
+        itemDto.setNextBooking(
+                nextBooking.map(BookingMapper::toBookingItemDto).orElse(null)
+        );
     }
 }
